Issue #165: clean up layout issues in mobile CSS
 - Fixed body padding
 - Fixed menu layout.
 - Fixed Welcome in mobile view.

--- a/Public/CSS/MobileSheet.css
+++ b/Public/CSS/MobileSheet.css
@@ -4,6 +4,10 @@
  * Contact myflightbook-at-gmail.com for more information
  *
 *******************************************************/
+h1 {
+    font-size:10pt;
+}
+
 /* Overrides for logbook entry to enable a vertical layout */
 .itemtimeleft
 {
@@ -107,7 +111,6 @@
 
 #headerMiddleContainer
 {
-    display: block;
 }
 
 #headerMobileCrossSell
@@ -247,10 +250,11 @@ html[xmlns] #menu-bar {
 #menu-bar #tabIDtabAdmin
 {
     background-image: none;
-    padding-left: 8px;
-    padding-right: 8px;
+    padding-left: 3px;
+    padding-right: 3px;
     background-size: 0pt;
     background-repeat: no-repeat;
+    font-stretch: condensed;
 }
 
 /* Progress towards ratings */
