--- a/Public/stylesheet.css
+++ b/Public/stylesheet.css
@@ -51,9 +51,12 @@ BODY, body {
     max-width: 1400px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 5px;
+    margin-top: 0px;
     margin-bottom: 5px;
-    padding: 0px, 3px, 3px, 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 0px;
+    padding-bottom: 5px;
 }
 
 TABLE, table
